--- a/app/assets/stylesheets/burger_menu.css.scss
+++ b/app/assets/stylesheets/burger_menu.css.scss
@@ -138,7 +138,7 @@ div#content {
 
   div.menu-trigger {
     position: absolute;
-    top: 36px;
+    top: 42px;
     left: 20px;
     width: 36px;
     height: 36px;
@@ -174,7 +174,7 @@ div.menu-trigger:hover .glyphicon-align-justify { color: white }
 .burger-icon {
   position: absolute;
   left: 11px;
-  margin-top: 7px;
+  margin-top: 9px;
   color: #556270;
 }
 
